[gd_scene load_steps=2 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]

[node name="HUD" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="." index="0"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -20.0
margin_right = 20.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Punkty: 0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MessageLabel" type="Label" parent="." index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -98.0
margin_top = -24.0
margin_right = 98.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Jako Matylda unikaj
nieprzyjemnych obowiazkow
ile tylko potrafisz!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="StartButton" type="Button" parent="." index="2"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -97.0
margin_top = -184.0
margin_right = 96.0
margin_bottom = -105.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "START!"
flat = false
align = 1
_sections_unfolded = [ "custom_fonts" ]

[node name="MessageTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]

[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]


